# cspell-dicts

./: .cspell.json  .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  sync-files.yaml
.github/workflows/: add-word.yaml  pytest.yaml
caret/: cspell-ext.json  package.json  words.txt
city-names/: cspell-ext.json  package.json  words.txt
cmake/: cspell-ext.json  package.json  words.txt
organization-names/: cspell-ext.json  package.json  words.txt
people-names/: cspell-ext.json  package.json  words.txt
ros/: cspell-ext.json  package.json  words.txt
template/: cspell-ext.json  words.txt
tests/: test_sort_words.py
tests/test_sort_words/: words.answer.txt  words.input.txt
tier4_cspell_dicts/: format_words.py
