[tool.poetry]
name = "tier4-cspell-dicts"
version = "0.1.0"
description = ""
authors = ["Kenji Miyake <kenji.miyake@tier4.jp>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-datadir = "^1.3.1"

[tool.poetry.scripts]
fix-yaml-extension = "tier4_cspell_dicts.format_words:main"

[tool.pyright]
typeCheckingMode = "strict"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
